# Vur

./: .gitignore  CI_CD_GUIDE.md  CI_CD_SUMMARY.md  FUNCIONALIDADES_ANALISE.md  LOCAL_TESTING_GUIDE.md  PLANO_IMPLEMENTACAO_PIPELINE_APIS.md  QUICK_START_TESTING.md  README.md  README_FIXES.md  README_STICKY_FEATURE.md  TASKS.md  TASKS_API_IMPLEMENTATION.md  docker-compose.dev.yml  docker-compose.yml  env.example  serve_test.py  test_login.html
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  quick-tests.yml  release.yml  security.yml
backend/: .gitignore  Dockerfile  Dockerfile.dev  PIPELINE_API.md  alembic.ini  init.sql  main.py  pyproject.toml  requirements.txt  test_dataset_apis.py
backend/alembic/: env.py
backend/alembic/versions/: 4a745eedc927_initial_migration.py
backend/app/: __init__.py
backend/app/api/v1/: __init__.py  router.py
backend/app/api/v1/endpoints/: auth.py  datasets.py  datasets_backup.py  models.py  monitoring.py  pipelines.py  predictions.py
backend/app/core/: config.py  database.py  logging.py  security.py
backend/app/models/: __init__.py  dataset.py  model.py  monitoring.py  pipeline.py  prediction.py  user.py
backend/app/schemas/: __init__.py  dataset.py  model.py  monitoring.py  pipeline.py  prediction.py  user.py
backend/app/services/: __init__.py  auth_service.py  data_analysis_service.py  dataset_service.py  model_service.py  monitoring_service.py  pipeline_service.py  timeseries_analysis_service.py  user_service.py
backend/scripts/: __init__.py  migrate.py  seed.py
backend/tests/: README.md  __init__.py  requirements-test.txt  run_tests.bat  run_tests.py  test_auth_apis.py
backend/uploads/datasets/1/: ciclo_37_completo.csv
frontend/: .env.example  .gitignore  Dockerfile  Dockerfile.dev  KILL_MOCK_MODE.js  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/public/: sample-data.csv
frontend/src/: App.tsx  test-auth.md
frontend/src/components/: AppSidebar.tsx  Layout.tsx  Navbar.tsx
frontend/src/components/auth/: LoginForm.tsx  ProtectedRoute.tsx  README.md  RegisterForm.tsx  SimpleLoginForm.tsx  UserProfile.tsx
frontend/src/components/debug/: ConnectionTest.tsx  MockModeIndicator.tsx  ResetSystem.tsx
frontend/src/components/pipeline/: DataPreprocessing.tsx  DataPreview.tsx  DataStatistics.tsx  DataUpload.tsx  DataUploadNew.tsx  DataVisualization.tsx  FeatureEngineering.tsx  ModelConfiguration.tsx  ModelSelection.tsx  ModelTraining.tsx  Monitoring.tsx  PreprocessingConfig.tsx  TrainTestSplit.tsx
frontend/src/components/ui/: loading.tsx
frontend/src/config/: development.ts
frontend/src/contexts/: AuthContext.tsx  PipelineContext.tsx
frontend/src/hooks/: useDataset.ts  usePipelines.ts  usePreprocessing.ts  useSticky.ts
frontend/src/hooks/api/: useAuth.ts
frontend/src/lib/: api.ts  mockApi.ts
frontend/src/pages/: AuthPage.tsx  Dashboard.tsx  DataManagement.tsx  Index.tsx  LandingPage.tsx  MonitoringPage.tsx  Pipeline.tsx
frontend/src/types/: dataset.ts
frontend/src/utils/: debugHelpers.ts  forceRealAPI.ts  metrics.ts  metricsExample.ts
scripts/: local-ci.ps1  local-ci.sh  setup-ci.sh  test-ci-local.bat  test-ci-local.sh
